Update WiFi credentials in getMsg function

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ function loadData() {
     });
 }
 
-const getMsg = (name) => `Habari ${name}, Karibu MOSHARUTH WiFi.\n📶 WiFi: RUGI\n🔐 Pass: goldnature44\nKaribu tena!`;
+const getMsg = (name) => `Habari ${name}, Karibu MOSHARUTH WiFi.\n📶 WiFi: SMART_HOME_TZ\n🔐 Pass: goldnature55\nKaribu tena!`;
 
 function sendWA(name, phone) {
     window.open(`https://wa.me/${phone}?text=${encodeURIComponent(getMsg(name))}`, '_blank');
